Hadoop MapReduce Change Log

Trunk (unreleased changes)


    MAPREDUCE-279

    Fix NPE when requesting attempts for completed jobs. (Siddharth Seth via llu)

    Changes a couple of usages of FileContext to FileSystem in TaskAttemptImpl 
    to handle distributed cache path resolutions on non-default filesystems.
    (ddas)

    Hack until MAPREDUCE-2365 is fixed to make PIG work with MRV2. (mahadev)

    Bug fix to set correct state on containers so as to avoid duplicate
    containers from RM to AM. (vinodkv)

    Adding attempts page to the history server UI. (vinodkv)

    Task diagnostic info made available on the AM UI. (vinodkv)

    MAPREDUCE-2598. Fix NPE and UI for JobHistory. (Siddharth Seth via llu)

    Fix NPE when killing/failing already killed/failed tasks. (llu)
   
    Update install instructions with svn unsplit (Thomas Graves via mahadev)

    MAPREDUCE-2587. Generate yarn version for UI. (Thomas Graves via llu)

    Fix stopContainer for setsid challenged platforms. (llu)

    Fix concurrent modification exception in the Capacity Scheduler (mahadev)

    Changes for invoking rack resolution in the RM and in the AM (ddas)

    Fix ClassCastException in JobHistoryServer for certain jobs.
    (Siddharth Seth via llu)

    MAPREDUCE-2569. Ensure root queue allocated 100% capacity. (Jonathan
    Eagles via cdouglas)

    Fix NPE in history event handling (siddharth seth via mahadev)

    Job level node blacklisting. (sharad)

    Fixing the bug which was causing FAILED jobs to be displayed as COMPLETED
    on the RM UI. (vinodkv)

    Fixing broken link to logs for container on NM web UI. (vinodkv)

    Miscellaneous UI fixes + source code formatting for
    MR JobHistoryEventHandler. (vinodkv)

    Display failed/killed attempts of the task on MR AM UI
    separately. (vinodkv)

    Changes a couple of usages of FileContext to FileSystem in YarnRunner
    to handle distributed cache path resolutions on non-default filesystems.
    (ddas)
